Version updated to 3.2.5 Compiled with Java 11. Method isRTL() added in Country.